# oci-rust-sdk

./: Cargo.toml  renovate.json
.github/workflows/: rust.yml
.github/workflows_disabled/: rust.yml
src/: base_client.rs  config.rs  identity.rs  lib.rs  vault_secret.rs
