[package]
name = "oci-sdk"
version = "0.3.1"
edition = "2021"
description = "Oracle Cloud Infrastructure SDK for Rust Lang"
license = "MIT"
repository = "https://github.com/digital-divas/oci-rust-sdk"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "~0", features = ["json"] }
tokio = { version = "~1", features = ["full"] }
openssl = "~0"
base64 = "~0"
sha2 = "~0"
serde_json = "~1"
chrono = "~0"
home = "~0"
configparser = "~3"
serde = { version = "~1", features = ["derive"] }
